@@ -7,7 +7,8 @@ Revision history for Perl extension Math::Prime::Util.
     - Fix compile issues on MSC, thanks to Sisyphus.
     - some bigint/bignum changes (next_prime and math functions).
     - speed up and enhance some tests.
-    - Add racing SQUFOF for UVs, also add a little more trial division.
+    - Test version of racing SQUFOF (not used in main code yet).  Also add
+      a little more up-front trial division for main factor routine.
 
 
 0.10  16 July 2012
